erDiagram
    CATEGORIAS ||--o{ PRODUCTOS : contiene
    PEDIDOS ||--o{ ITEMS_PEDIDO : contiene
    USUARIOS |o--o{ PEDIDOS : "planificado, no implementado"

    ADMINISTRADORES {
        bigint id PK
        varchar user
        varchar pass
        varchar nombre
        varchar apellido
    }
    CATEGORIAS {
        bigint id PK
        varchar nombre
    }
    PRODUCTOS {
        bigint id PK
        varchar nombre
        varchar descripcion
        decimal(10,2) precio
        int stock
        bigint categoria_id FK
    }
    PEDIDOS {
        bigint id PK
        varchar cliente_nombre
        varchar chat_id
        decimal(10,2) total
        varchar estado
        datetime fecha_hora
    }
    ITEMS_PEDIDO {
        bigint id PK
        bigint producto_id "sin FK declarada"
        varchar nombre "snapshot al momento de compra"
        int cantidad
        decimal(10,2) precio "snapshot al momento de compra"
        decimal(10,2) subtotal
        bigint pedido_id FK
    }
    USUARIOS {
        bigint id PK
        varchar nombre
        varchar apellido
        varchar email
        varchar dni
        varchar direccion
        varchar telefono
    }
